<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_activity"
        tools:context=".ui.LoginActivity">

        <com.like.upper.pleasure.view.ViewTitle
            android:id="@+id/view_infoImg_header"
            android:background="@color/purple_200"
            app:layout_constraintTop_toTopOf="parent"
            app:text_title_view="@string/info1_image_title"
            app:left_title_image="@drawable/ic_back"
            app:right_title_image="@drawable/kefufill"
            android:layout_width="match_parent"
            android:layout_height="56dp">
        </com.like.upper.pleasure.view.ViewTitle>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl"
            android:layout_marginTop="56dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:paddingBottom="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/info1_image_title1"
                        android:textColor="@color/text_333"
                        android:textSize="18sp"
                        />

                    <com.like.upper.pleasure.view.ViewUpload
                        android:id="@+id/view_Upload1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:text_title="@string/info1_image_text1"
                        app:image_center="@drawable/camer_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:padding="16dp"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_white_radios8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:paddingLeft="16dp"
                            android:text="@string/info1_image_content1"
                            android:textColor="#ff0e85ff"
                            android:textSize="14sp"
                            />

                        <EditText
                            android:id="@+id/et_infoImg_card"
                            android:background="@color/white"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="8dp"
                            android:textSize="12sp"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:inputType="number"
                            android:textColor="@color/text_333"
                            android:textColorHint="@color/text_999"
                            android:hint="@string/info1_chose_hint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </EditText>

                    </LinearLayout>

                    <com.like.upper.pleasure.view.ViewUpload
                        android:id="@+id/view_Upload2"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        app:text_title="@string/info1_image_text2"
                        app:image_center="@drawable/renlian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <include layout="@layout/privacy_text"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_marginLeft="64dp"
                    android:layout_marginRight="64dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:clickable="false"
                    android:text="@string/login_register"
                    android:background="@drawable/bt_register"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
