<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_choseData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:elevation="8dp"
        android:background="#e0666666"
        tools:context=".ui.ChoseDateActivity">
        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical"
            android:layout_marginTop="72dp"
            android:background="@drawable/shape_white_radios8"
            app:layout_constraintBottom_toTopOf="@+id/ly_choseData_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:paddingTop="24dp"
                android:paddingBottom="12dp"
                android:textStyle="bold"
                android:text="@string/title"
                android:textColor="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:id="@+id/ly_choseData_bottom"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_cancel"
                android:background="@drawable/bt_white_click"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/purple_200"
                android:text="@string/accept_cnacle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"/>

            <TextView
                android:id="@+id/tv_accept"
                android:layout_marginLeft="16dp"
                android:background="@drawable/bt_orange_click"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/accept_confirm"
                android:layout_width="wrap_content"
                android:layout_height="48dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>